--- a/test/TestUtilities/EFCore.TestUtilities.csproj
+++ b/test/TestUtilities/EFCore.TestUtilities.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.assert" Version="2.4.0" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.0" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.0" />
   </ItemGroup>
 
   <PropertyGroup>
