--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 version: 3.1.{build}
 configuration: Release
-services: postgresql12
+services:
+- postgresql12
+- mysql
 
 before_build:
 - cmd: nuget restore EFCore.BulkExtensions.sln
